TodoForm.js Todo.js

--- a/todo_react/src/App.css
+++ b/todo_react/src/App.css
@@ -1,7 +1,4 @@
-.app {
-  background: #209cee;
-  padding: 30px;
-  height: 100vh;
+.App {
   text-align: center;
 }
 
@@ -38,6 +35,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.app {
+  background: #209cee;
+  padding: 30px;
+  height: 100vh;
 }
 
 .todo-list {
